--- a/01-netcfg.yaml
+++ b/01-netcfg.yaml
@@ -5,7 +5,16 @@ network:
     enp0s3:
       dhcp4: no
       addresses:
-        - 192.168.0.10/24
-      gateway4: 192.168.0.100
+        - 192.168.0.100/24
+      nameservers:
+        addresses: [8.8.8.8, 8.8.4.4]
+    enp0s8:
+      dhcp4: no
+      addresses:
+        - 10.0.0.100/8
+      nameservers:
+        addresses: [8.8.8.8, 8.8.4.4]
+    enp0s9:
+      dhcp4: yes
       nameservers:
         addresses: [8.8.8.8, 8.8.4.4]
